added absolute paths and updated README

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -24,7 +24,7 @@
     <footer>
         &copy; 2024 George Ore
     </footer>
-    <script src="js/scripts.js"></script>
+    <script src="/js/scripts.js"></script>
 </body>
 </html>
 
